refactor: SectionAdditionResult optional -> List로 변경
옵셔널을 필드로 사용하는것은 안티 패턴이기 때문에 수정,
List 형태를 사용하여 널 체크를 피하는 방식으로 변경